
ADD_EXECUTABLE(camera main.cpp)
TARGET_LINK_LIBRARIES(camera rtabmap_core)

SET_TARGET_PROPERTIES( camera 
  PROPERTIES OUTPUT_NAME ${PROJECT_PREFIX}-camera)
  
INSTALL(TARGETS camera
		RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT runtime
		BUNDLE DESTINATION "${CMAKE_BUNDLE_LOCATION}" COMPONENT runtime)