
IF(MINGW)
  ADD_EXECUTABLE(dataRecorder WIN32 main.cpp)
ELSE()
  ADD_EXECUTABLE(dataRecorder main.cpp)
ENDIF()
TARGET_LINK_LIBRARIES(dataRecorder rtabmap_gui)

SET_TARGET_PROPERTIES( dataRecorder 
  PROPERTIES OUTPUT_NAME ${PROJECT_PREFIX}-dataRecorder)

INSTALL(TARGETS dataRecorder
		RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT runtime
		BUNDLE DESTINATION "${CMAKE_BUNDLE_LOCATION}" COMPONENT runtime)
