
ADD_EXECUTABLE(dbupdate main.cpp)

TARGET_LINK_LIBRARIES(dbupdate rtabmap_core)

SET_TARGET_PROPERTIES( dbupdate
	PROPERTIES OUTPUT_NAME ${PROJECT_PREFIX}-dbupdate)

INSTALL(TARGETS dbupdate
		RUNTIME DESTINATION "${CMAKE_INSTALL_BINDIR}" COMPONENT runtime
		BUNDLE DESTINATION "${CMAKE_BUNDLE_LOCATION}" COMPONENT runtime)
